--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
      ports:
        - "80:8080"
      volumes:
-       - ./wp-multitenant:/var/www
+       - ./html:/var/www/html
+       - ./cu-multitenant:/var/www/multitenant
      restart: always
      environment:
       DB_HOST: db:3306
