Fixes local SSL issues

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -6,7 +6,9 @@ RUN yum -y update && \
 	epel-release \
 	httpd \
 	unzip \
-	wget
+	wget \
+	openssl \
+	openssl-libs
 
 # -----------------------------------------------------------------------------
 # Apache 2.4 + (PHP 7.2 from Remi)
@@ -33,11 +35,10 @@ RUN yum -y install http://rpms.remirepo.net/enterprise/remi-release-7.rpm && \
 	libaio \
 	libnghttp2 \
 	libcurl \
-	openssl \
-	openssl-libs \
 	nano \
 	mysql && \
 	sed -i 's/;error_log = syslog/error_log = \/dev\/stderr/' /etc/opt/remi/php72/php.ini && \
+	sed -i 's/#ServerName www.example.com:443/ServerName local.carleton.ca:443/' /etc/httpd/conf.d/ssl.conf && \
 	ln -sf /dev/stdout /var/log/httpd/access_log && \
 	ln -sf /dev/stderr /var/log/httpd/error_log && \
 	ln -sf /usr/bin/php72-pear /usr/bin/pear && \
@@ -48,15 +49,19 @@ RUN yum -y install http://rpms.remirepo.net/enterprise/remi-release-7.rpm && \
 	yum clean all && \
 	rm -rf /var/cache/yum && \
 	rm -f /etc/httpd/conf.d/{userdir.conf,welcome.conf} && \
-	sed -i 's/Listen 80/Listen 8080/' /etc/httpd/conf/httpd.conf && \
 	ln -s /usr/bin/php72 /usr/bin/php && \
 	php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
 	php composer-setup.php --install-dir=/usr/local/bin --filename=composer
 
+COPY ssl/localhost.key /etc/pki/tls/private/localhost.key
+COPY ssl/localhost.crt /etc/pki/tls/certs/localhost.crt
+
 # -----------------------------------------------------------------------------
 # Set ports and env variable HOME
 # -----------------------------------------------------------------------------
-EXPOSE 8080
+EXPOSE 80
+EXPOSE 443
+
 ENV HOME /var/www/html
 
 # -----------------------------------------------------------------------------
